# psocVuoto

./: CMakeLists.txt  README.md  base.cywrk  crossArm.cmake  pul.bat
App.cydsn/: App.cydwr  App.cyprj  pul.bat
App.cydsn/cod/: app.c  (+2 more)
BL.cydsn/: BL.cydwr  BL.cyprj
Lib/: CMakeLists.txt  pul.bat
Lib/amp/: CMakeLists.txt  amp.c  amp.h
Lib/ble/: CMakeLists.txt  ble.c  ble.h  ble_cfg_template.h  ble_stampe.c  seriale_le.c
Lib/cmake/: ble_cfg.h  ftl_cfg.h  project.h  soc_cfg.h  stampa.h  timer_cfg.h
Lib/diario/: CMakeLists.txt  stampa.c  stampa.h
Lib/fsm/: CMakeLists.txt  fsm.c  fsm.c.bak  fsm.h.bak
Lib/ftl/: CMakeLists.txt  bit.h  ftl.c  ftl.h  ftl_cfg_template.h  tu.c
Lib/i2c/: CMakeLists.txt  i2c.c  i2c.h
Lib/pcom/: pcom.c  pcom.h  pcom_cfg_template.h
Lib/soc/: CMakeLists.txt  crit_sec.h  dbg.h  soc.c  soc.c.bak  soc.h  soc_cfg_template.h  timer.c  timer.h  timer_cfg_template.h  utili.h  wdog.c  wdog.c.bak  wdog.h  wdog.h.bak  wdtimer_cfg_template.h
Lib/spi/: CMakeLists.txt  fspi.c  fspi.h  vspi.c
Lib/tmdp/: CMakeLists.txt  tmdp.c  tmdp.c.bak  tmdp.h  tmdp_cfg_template.h
Lib/ufr/: CMakeLists.txt  ufr.c  ufr.h  ufr_cfg_template.h
Lib/unity/: unity_config.h
Lib/utili/: CMakeLists.txt  circo.c  circo.h  crc1021.c  crc1021.h  crc31.c  crc31.h  dbg.h  includimi.h  time2.c  time2.h  varie.c  varie.h  vp.c  vp.h
Lib/xmem/: CMakeLists.txt  at25sf041.c  at25sf041.h  s25fl064l.c  s25fl064l.h  xmem.h  xmem_at25sf041.c
Lib/xmem/cod/: at25sf041.c  at25sf041.h  fspi.h  s25fl064l.c  s25fl064l.h  xmem.c  xmem_async.c
Lib/xmem/xmem/: at25sf041.h  xmem.h
(+44 files in other folders)
