include_directories(cmake)
include_directories(.)

add_subdirectory(fsm)
add_subdirectory(xmem)
add_subdirectory(utili)
#add_subdirectory(ufr)
add_subdirectory(spi)
add_subdirectory(soc)
add_subdirectory(i2c)
add_subdirectory(ftl)
add_subdirectory(diario)
add_subdirectory(ble)
add_subdirectory(amp)
